man-yaml/mrs-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  labels:
    app.kubernetes.io/instance: mrs-www-dev
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/name: mrs-www-dev
    helm.sh/chart: mrs-www-0.3.2
  name: mrs-www-dev
  namespace: default
spec:
  rules:
  - host: dev.mikeroysoft.com
    http:
      paths:
      - backend:
          serviceName: mrs-www-dev
          servicePort: http
        path: /
        
  tls:
  - hosts:
    - dev.mikeroysoft.com
    secretName: mrs-www-dev-certificates
